# native-ipc-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  flake.nix
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.ptrack/: ptrack.db
crates/native-ipc/: Cargo.toml  README.md  build.rs
crates/native-ipc-core/: Cargo.toml  README.md
crates/native-ipc-core/examples/: bounded_codec.rs  checked_layout.rs
crates/native-ipc-core/src/: codec.rs  codec_test.rs  layout.rs  layout_test.rs  lib.rs  mapping.rs  mapping_test.rs  slot.rs  slot_test.rs
crates/native-ipc-platform/: Cargo.toml  README.md
crates/native-ipc-platform/examples/: quiescent_region.rs  ready_commit.rs
crates/native-ipc-platform/src/: lib.rs  linux.rs  linux_test.rs  macos.rs  protocol.rs  protocol_test.rs  windows.rs  windows_test.rs
crates/native-ipc-platform/src/macos/: bootstrap.rs  bootstrap_test.rs
crates/native-ipc-testkit/: Cargo.toml  README.md
crates/native-ipc-testkit/examples/: hostile_inputs.rs
crates/native-ipc-testkit/src/: lib.rs
crates/native-ipc-testkit/tests/: golden_vectors.rs
crates/native-ipc-testkit/tests/vectors/: u32-message.hex
crates/native-ipc/examples/: common_memory.rs
crates/native-ipc/src/: active.rs  active_test.rs  batch.rs  batch_test.rs  binding.rs  binding_test.rs  control.rs  control_test.rs  external_memory.c  lib.rs  liveness.rs  liveness_test.rs  memory.rs  memory_test.rs  negotiation.rs  negotiation_test.rs  protocol.rs  protocol_test.rs  region.rs  region_test.rs  session.rs  session_test.rs
crates/native-ipc/src/backend/: accepted_control.rs  accepted_control_test.rs  linux.rs  linux_test.rs  linux_vnext.rs  linux_vnext_test.rs  macos.rs  macos_test.rs  mod.rs  mod_test.rs  reaper_ownership.rs  reaper_ownership_test.rs  windows.rs  windows_test.rs
crates/native-ipc/src/backend/linux_vnext/: memory.rs  memory_test.rs  process.rs  process_test.rs  spawn.rs  spawn_test.rs
crates/native-ipc/src/backend/macos/: bootstrap.rs  bootstrap_test.rs  supervisor.rs  supervisor_auth_adapter.rs  supervisor_auth_adapter_test.rs  supervisor_auth_worker_entry.rs  supervisor_auth_worker_entry_test.rs  supervisor_auth_worker_spawn.rs  supervisor_auth_worker_spawn_test.rs  supervisor_broker_entry.rs  supervisor_broker_entry_test.rs  supervisor_broker_launcher.rs  supervisor_broker_launcher_test.rs  supervisor_broker_plan.rs  supervisor_broker_plan_test.rs  supervisor_broker_report.rs  supervisor_broker_report_test.rs  supervisor_broker_spawn.rs  supervisor_broker_spawn_test.rs  supervisor_client.rs  supervisor_client_test.rs  supervisor_launcher.rs  supervisor_launcher_entry.rs  supervisor_launcher_entry_test.rs  supervisor_launcher_lifecycle_test.rs  supervisor_launcher_test.rs  supervisor_spawn_primitives.rs  supervisor_spawn_primitives_test.rs  supervisor_test.rs  supervisor_watchdog.rs  supervisor_watchdog_test.rs
crates/native-ipc/src/backend/macos_vnext/: image_identity.rs  image_identity_test.rs  memory.rs  memory_test.rs  reducer_test.rs  session.rs  session_test.rs  transport.rs  transport_test.rs
crates/native-ipc/src/backend/windows_vnext/: memory.rs  memory_test.rs  reducer_test.rs  session.rs  transport.rs  transport_test.rs
crates/native-ipc/tests/: macos_auth_worker_entry.rs  macos_auth_worker_requirement_matrix.rs  macos_broker_gate_entry.rs  public_consumer_surface.rs  receiver_main_downstream.rs  rt.rs
docs/: architecture.md  concurrency-testing.md  dead-code-audit.md  integration-model.md  linux-agent.md  linux-native-report.md  macos-supervisor-boundary.md  native-ipc-vnext-spec.md  public-api.md  releasing.md  threat-model.md  vnext-feasibility.md  vnext-implementation-plan.md  vnext-protocol-decisions.md  vnext-traceability.md
docs/proofs/: README.md  nipc_proof.c
docs/review/: README.md  consolidated-2026-07-10.md  full-review-2026-07-15.md  full-review-2026-07-16.md  implementation-prompt.md
fuzz/: Cargo.toml
fuzz/corpus/envelope/: seed
fuzz/corpus/layout/: seed
fuzz/fuzz_targets/: envelope.rs  layout.rs
