[package]
name = "native-ipc-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
native-ipc-core = { path = "../crates/native-ipc-core" }

[[bin]]
name = "envelope"
path = "fuzz_targets/envelope.rs"
test = false
doc = false
bench = false

[[bin]]
name = "layout"
path = "fuzz_targets/layout.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
