[package]
name = "native-ipc-platform"
description = "Least-authority native OS capabilities and mappings for native-ipc"
version = "0.4.0"
edition = "2024"
rust-version = "1.97"
authors = ["Rodrigo Agurto"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ro-ag/native-ipc-rs"
homepage = "https://github.com/ro-ag/native-ipc-rs"
documentation = "https://docs.rs/native-ipc-platform"
readme = "README.md"
keywords = ["ipc", "shared-memory", "process", "capability", "security"]
categories = ["os", "memory-management"]

[dependencies]
native-ipc-core = { path = "../native-ipc-core", version = "0.4.0" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_JobObjects",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

[features]
default = []

[lints.rust]
missing_docs = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[package.metadata.docs.rs]
targets = [
    "aarch64-apple-darwin",
    "aarch64-pc-windows-msvc",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]
