[package]
name = "native-ipc-testkit"
description = "Adversarial helpers and cross-process conformance fixtures for native-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/native-ipc-testkit"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
native-ipc = { path = "../native-ipc", version = "0.4.0" }
native-ipc-core = { path = "../native-ipc-core", version = "0.4.0" }

[features]
default = []

[lints]
workspace = true
