[package]
name = "native-ipc"
description = "One safe API for least-authority native shared memory: sealed memfd on Linux, Mach memory entries on macOS, exact-rights sections on Windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
native-ipc-core = { path = "../native-ipc-core", version = "0.4.0" }
sha2 = { version = "0.10", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Wdk_Foundation",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_JobObjects",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }

[build-dependencies]
cc = "1.2"

[dev-dependencies]
static_assertions = "1.1"

[features]
default = ["std"]
std = ["native-ipc-core/std"]
raw-pointer = []

[lints]
workspace = true

[package.metadata.docs.rs]
targets = [
    "aarch64-apple-darwin",
    "aarch64-pc-windows-msvc",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]

[[test]]
name = "receiver-main-downstream"
path = "tests/receiver_main_downstream.rs"
harness = false

[[test]]
name = "macos-broker-gate-entry"
path = "tests/macos_broker_gate_entry.rs"
harness = false

[[test]]
name = "macos-auth-worker-entry"
path = "tests/macos_auth_worker_entry.rs"
harness = false

[[test]]
name = "macos-auth-worker-requirement-matrix"
path = "tests/macos_auth_worker_requirement_matrix.rs"
harness = false
